# maroilles

./: CMakeLists.txt
examples/: CMakeListst.txt
examples/example_0/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/cmake/: FindOpenCL.cmake
lib/include/: maroilles.hpp  opencl.hpp
lib/include/opencl/: opencl.hpp  radixsort.hpp  saxpy.hpp  scan.hpp
lib/src/: maroilles.cpp  opencl.cpp
lib/src/opencl/: opencl.cpp  radixsort.cpp  saxpy.cpp  scan.cpp
tests/: CMakeLists.txt  opencl.cpp
